# fuche-code-agent

./: Cargo.toml  clawrouter.html  codes.txt  dev.html  final.html  flow.txt  fuche-codes.txt  index.html  jarvis.html  notes.html  notes.txt  notes_v2.html  notes_v3.txt  notes_v4.txt  plans.txt  warning.html
src/: commands.rs  config.rs  history.rs  magic.rs  main.rs  mapper.rs  mode.rs  ollama.rs  ollama.rs.bak  popup.rs  spinner.rs  tools.rs  ui.rs
src/magic/: audio.rs  mod.rs  spectrum.rs  sys.rs  ui.rs
